<resources>
    <string name="app_name">Mobile Application</string>
    <string name="email">EMAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="in"><u>Sign In</u></string>
    <string name="up">SIGN UP</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="identify">Identify By</string>
    <string name="imageCaption">ADD A PICTURE OF THE PAW MARKS</string>
    <string name="identity">IDENTITY</string>
    <string name="book">DIRECTORY</string>
    <string name="nav">NAVIGATION</string>
    <string name="location">Allow Location</string>
</resources>
