<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/location"
        app:layout_constraintBottom_toTopof="@+id/bottom_list" />

    <LinearLayout

        android:id="@+id/bottom_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal|center"
        android:background="@drawable/bottom_border"
        android:gravity="center">


        <TextView
            android:id="@+id/identity"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/search_icon"
            android:gravity="center"
            android:text="@string/identity" />


        <TextView
            android:id="@+id/directory"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/book"
            android:gravity="center"
            android:text="@string/book" />


        <TextView
            android:id="@+id/nav"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/navigation"
            android:gravity="center"
            android:text="@string/nav" />


    </LinearLayout>
</LinearLayout>