<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.psaga.mobileapplication.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="800dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/cat_full" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintDimensionRatio="w,1:1">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="450px"
                android:layout_height="125px"

                android:layout_marginTop="100dp"
                android:fontFamily="@font/myriad_pro"
                android:text="@string/email"
                android:textColor="#6f7f87"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="450px"
                android:layout_height="100px"
                android:fontFamily="@font/myriad_pro"
                android:inputType="textPassword"
                android:text="@string/password"
                android:textColor="#6f7f87" />

            <Button
                android:id="@+id/button2"
                android:layout_width="400px"
                android:layout_height="120px"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_button"
                android:text="@string/up"
                android:textColor="#FFFFFF"
                android:textColorLink="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/in" />


        </LinearLayout>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="111.24px"
            android:layout_height="121.453dp"
            android:layout_alignLeft="@+id/imageView8"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/imageView8"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp"
            android:contentDescription="@null"
            app:layout_constraintBottom_toTopOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.246"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.102"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="380px"
            android:layout_height="116dp"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="117dp"
            android:layout_marginStart="117dp"
            android:layout_marginTop="86dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/title" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
